--- a/CSS/cssGenerale.css
+++ b/CSS/cssGenerale.css
@@ -244,7 +244,7 @@ input[type="submit"] {
 	cursor: pointer; 
 	padding: 0;
 	border-radius: 2px; 
-	font-size: 1.7em;
+	font-size: 1.1em;
 	padding: 0 0.3em;
 	font-weight: bolder; 
 }
@@ -266,15 +266,15 @@ input[type="submit"] {
 
 @media (max-width:750px){
     #scrollUp{
-        font-size: 1.3em;
+		font-size: 1em;
+		padding:0 0.1em;
     }
 
 }
 
-@media (max-width:600px){
+@media (max-width:470px){
     #scrollUp{
-        font-size: 1em;
-        padding:0 0.1em;
+        display: none;
     }
 }
 
