css amministratore completo (desktop, mobile, stampa)

--- a/CSS/cssPrint.css
+++ b/CSS/cssPrint.css
@@ -7,7 +7,7 @@ body {
   font-size: 12pt;
 }
 
-#header, #menu, #breadcrumb, .logoHeader, #footer {
+#header, #menu, #breadcrumb, #footer {
   display: none;
 }
 
