--- a/CSS/cssAmministratore.css
+++ b/CSS/cssAmministratore.css
@@ -1,4 +1,7 @@
-/* stile per i dispositivi desktop */
+html, body {
+	max-width: 95% !important;
+}
+
 .corpoAmministratore {
     background-color: #F1AB00;
     margin: 1%;
@@ -63,12 +66,10 @@
     display: inline-block;
 }
 
-.formRispAmm fieldset,
-.formElimAmm fieldset,
-.formModAmm fieldset {
+.formRispAmm fieldset, .formElimAmm fieldset, .formModAmm fieldset {
     border: none;
-    padding: 0%;
-    margin: 0%
+    padding: 0;
+    margin: 0;
 }
 
 .formElimAmm {
@@ -152,9 +153,7 @@
     vertical-align: top;
 }
 
-.formAmm input[type="text"],
-.formAmm input[type="file"],
-.formAmm textarea {
+.formAmm input[type="text"], .formAmm input[type="file"], .formAmm textarea {
     font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size: 1em;
     padding: 1%;
@@ -179,12 +178,7 @@
     cursor: pointer;
 }
 
-#nuovoVeicoloNoleggio,
-#nuovoVeicoloVendita,
-#modificaVeicoloVendita,
-#modificaVeicoloNoleggio,
-#rispostaMessaggioAmministartore,
-#modificaInfo {
+#nuovoVeicoloNoleggio, #nuovoVeicoloVendita, #modificaVeicoloVendita, #modificaVeicoloNoleggio, #rispostaMessaggioAmministartore, #modificaInfo {
     text-align: center;
 }
 
@@ -195,70 +189,4 @@
     margin: 1%;
     padding: 1%;
     text-align: center;
-}
-
-/* stile per i dispositivi mobile */
-@media(max-width: 1000px){
-    #menuAmministratore{
-        float: none;
-        width: 100%;
-        font-size: 1em;
-        background-color: white;
-        padding-bottom: 4%;
-        border-bottom: 5px double black;
-    }
-
-    #menuAmministratore ul li{
-        margin: 1px;
-        padding: 3%;
-        background-color: #F1AB00;
-        border-radius: 5px;
-    }
-
-    .testoAmministratore{
-        float: none;
-        width: 100%;
-        background-color: white;
-    }
-
-    .divAmm {
-        height: 15vh;
-        border-top: 0.5px solid grey;;
-        border-bottom: 0.5px solid grey;
-        margin: 1%;
-        padding-bottom: 3%;
-    }
-
-    .noButt{
-        font-size: 0.8em;
-    }
-
-    .pAmm, .formAmm label{
-        font-size: 0.8em;
-    }
-
-    .pLinkAmm{
-        font-size: 0.9em;
-        text-align: center;
-        margin: 5%;
-    }
-
-    .formAmm label {
-        width: 100%;
-        text-align: center;
-    }
-
-    .formAmm input[type="text"],
-    .formAmm input[type="file"],
-    .formAmm textarea {
-        font-size: 0.8em;
-    }
-
-    .formAmm input[type="submit"] {
-        font-size: 0.8em;
-    }
-
-    .imgAutoAmm {
-        max-height: 50%;
-    }
 }
