--- a/CSS/cssVeicoli.css
+++ b/CSS/cssVeicoli.css
@@ -1,8 +1,3 @@
-html, body {
-	max-width: 95% !important;
-  }
-  
-
 .containerVeicolo{
 	padding: 1%;
 	margin: 3%;
@@ -50,8 +45,8 @@ input {
 }
 
 #costoTot {
-	margin-left: 50px;
-	margin-top: 100px;
+	margin-left: 5%;
+	margin-top: 5%;
 }
 
 .titolo{
