--- a/CSS/cssAmmMobile.css
+++ b/CSS/cssAmmMobile.css
@@ -2,8 +2,10 @@ html, body {
     max-width: 95% !important;
 }
 
-.corpoAmministratore {
+#mainContent, .corpoAmministratore, #mainContent.corpoAmministratore {
     margin: 0;
+    padding: 0;
+    background-color: white;
 }
 
 #menuAmministratore{
@@ -12,6 +14,8 @@ html, body {
     font-size: 1em;
     background-color: white;
     border-bottom: 5px double black;
+    margin: 0;
+    padding: 0;
 }
 
 #menuAmministratore ul li{
@@ -25,6 +29,8 @@ html, body {
     float: none;
     width: 100%;
     background-color: white;
+    margin: 0;
+    padding: 0;
 }
 
 .linkMod {
