--- a/CSS/cssUtente.css
+++ b/CSS/cssUtente.css
@@ -179,18 +179,31 @@ hr {
   padding-bottom: 1em;
 }
 
-@media (max-width:700px) {
+@media (max-width:800px) {
   #nav {
-    padding: 1em;
+    padding: 0;
+    padding-top: 1em;
     display: block;
-    width: 85%;
+    width: 100%;
+    margin: 0;
     height:inherit;
     overflow: auto;
   }
 
+  #nav li {
+    padding-top: 0.7em;
+    padding-bottom: 0.7em;
+    font-size: 120%;
+  }
+
+  .titolo {
+    margin-bottom: 0.6em;
+  }
+
   #content {
     display: block;
-    width: auto;
+    padding: 0.3em;
+    width: 90%;
   }
 
   .linkRapidi {
