--- a/CSS/cssPrint.css
+++ b/CSS/cssPrint.css
@@ -8,11 +8,15 @@ body {
 }
 
 #header {
-  font-size: 100%;
+  font-size: 140%;
   text-align: center;
   margin-bottom: 0.7em;
   border-top: white;
   border-bottom: white;
+}
+
+#header a {
+  text-align: center;
 }
 
 #header a[href]:after {
