--- a/CSS/cssGenerale.css
+++ b/CSS/cssGenerale.css
@@ -34,7 +34,6 @@ body {
 .messaggio {
 	text-align: center;
 	font-size: 1.1em;
-	color: #FFFFFF;
 	padding: 1%;
 	margin: 1%;
 	border-radius: 5px;
@@ -44,10 +43,12 @@ body {
 
 .errorMessage {
 	background: #C13636;
+	color: #FFFFFF;
 }
 
 .successMessage {
 	background: #4CAF50;
+	color: #FFFFFF;
 }
 
 .hidden {
@@ -94,40 +95,6 @@ body {
 	clear: both;
 	padding: 0.7em;
 	margin: 0;
-}
-
-.flexbox-parent {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start; /* align items in Main Axis */
-    align-items: stretch; /* align items in Cross Axis */
-    align-content: stretch; /* Extra space in Cross Axis */
-}
-
-.flexbox-item {
-    padding: 8px;
-}
-
-
-.flexbox-item-grow {
-    flex: 1; /* same as flex: 1 1 auto; */
-}
-
-.fill-area {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start; /* align items in Main Axis */
-    align-items: stretch; /* align items in Cross Axis */
-	align-content: stretch; /* Extra space in Cross Axis */
-	margin: 0;
-	padding: 0;
-}
-
-.fill-area-content {
-    /* Needed for when the area gets squished too far and there is content that can't be displayed */
-    overflow: auto;
 }
 
 #menu {
@@ -200,7 +167,8 @@ input[type="submit"] {
     right: 0;
     top: 0;
     cursor: pointer;
-    padding: 1.4em 2em 1.4em 2em;
+    margin-top: 16px;
+    margin-right: 23px;
     min-width: 48px;
 }
 
@@ -259,12 +227,22 @@ input[type="submit"] {
 
 @media (max-width:1000px) {
 	html, body {
-		max-width: 95%;
+		max-width: 100%;
 	}
 
 	#scrollUp{
         right:2px;
 		bottom:20px;
+	}
+}
+
+@media (max-width:800px){
+	#header {
+		text-align: center;
+	}
+
+	#header > *, .logoHeader {
+		float: none;
 	}
 }
 
