aggiornato altervista e css pulsante

--- a/CSS/cssGenerale.css
+++ b/CSS/cssGenerale.css
@@ -41,6 +41,10 @@ body {
 	-webkit-border-radius: 5px;
 }
 
+.js {
+	font-size: 0.5em;
+}
+
 .errorMessage {
 	background: #C13636;
 	color: #FFFFFF;
