--- a/CSS/cssAmministratore.css
+++ b/CSS/cssAmministratore.css
@@ -10,7 +10,7 @@
     text-align: justify;
     font-size: 1.1em;
     background-color: #F1AB00;
-    color: #FFFFFF;
+    color: #000000;
     margin: 1%;
     margin-right: 0.5%;
     padding: 0;
@@ -40,7 +40,6 @@
     padding: 1%;
     margin: 1%;
     background-color: #F1AB00;
-    color: #FFFFFF;
     border-radius: 4px;
     font-weight: bolder;
     display: inline-block;
@@ -53,7 +52,6 @@
     width: 100%;
     min-height: 5%;
     font-size: 1em;
-    text-decoration: underline;
 }
 
 .formRispAmm {
@@ -111,8 +109,8 @@
 }
 
 .divAmm {
-    border-top: 0.5px solid grey;
-    border-bottom: 0.5px solid grey;
+    border-top: 0.5px solid #474747;
+    border-bottom: 0.5px solid #474747;
     margin: 3% 0% 3% 0%;
     padding: 1%;
 }
@@ -158,7 +156,7 @@
     font-size: 1em;
     padding: 1%;
     margin: 0.5%;
-    border: 1px solid black;
+    border: 1px solid #000000;
     border-radius: 4px;
     box-sizing: content-box;
     width: 65%;
@@ -172,7 +170,7 @@
     margin: 1%;
     background-color: #F1AB00;
     border-color: #F1AB00;
-    color: #FFFFFF;
+    color: #000000;
     border-radius: 4px;
     font-weight: bolder;
     cursor: pointer;
