--- a/CSS/cssUtente.css
+++ b/CSS/cssUtente.css
@@ -1,6 +1,6 @@
 .mainContent {
   overflow: auto;
-  background-color: white;
+  background-color: #FFFFFF;
 }
 
 .inputArea {
@@ -25,7 +25,7 @@
   width: auto;
   overflow: auto;
   background-color: #F1AB00;
-  color: #FFFFFF;
+  color: #000000;
   border-radius: 4px;
   font-weight: bolder;
   display: block;
@@ -143,7 +143,7 @@ h4 {
   padding: 0.4em;
   overflow: auto;
   background-color: #F1AB00;
-  color: #FFFFFF;
+  color: #000000;
   border-radius: 4px;
   font-weight: bolder;
   display: block;
