--- a/CSS/cssPrintVeicoli.css
+++ b/CSS/cssPrintVeicoli.css
@@ -7,7 +7,7 @@ html, body {
 	border: none;
 	overflow: auto;
 	width: 100%;
-  	background-color: #FFFFFF;
+  	background-color: white;
   	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
 	box-shadow: none;
