--- a/CSS/cssVeicoli.css
+++ b/CSS/cssVeicoli.css
@@ -7,7 +7,7 @@
 	box-shadow: 1px 1px 9px 0px rgba(97,97,97,1);
 	overflow: auto;
 	width: auto;
-	background-color: #FFFFFF;
+	background-color: white;
 }
 
 .containerVeicolo > *{
