--- a/CSS/cssAmministratore.css
+++ b/CSS/cssAmministratore.css
@@ -1,5 +1,5 @@
 .corpoAmministratore {
-    background-color: #F1AB00;
+    background-color: #FFFFFF;
     margin: 0;
 }
 
@@ -15,6 +15,13 @@
     margin-right: 0.5%;
     padding: 0;
     clear: both;
+}
+
+.linkHidden {
+    padding: 0;
+    margin: 0;
+    width: 0;
+    font-size: 0;
 }
 
 #menuAmministratore ul {
