--- a/CSS/cssPrintContatti.css
+++ b/CSS/cssPrintContatti.css
@@ -1,11 +1,7 @@
-.containerInfo{
-    page-break-after: always;
-}
-
 #mainContent{
-    font-size: 1.7em;
+    font-size: 1.4em;
 }
 
-#mappa{
+#formMessaggio,#testo{
     display: none;
 }
